<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eleccionmesa"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".activities.EleccionMesa">

    <Button
        android:id="@+id/volver"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="333dp"
        android:layout_marginBottom="775dp"
        android:background="@mipmap/volver"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.507"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/actualizar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="336dp"
        android:layout_marginTop="40dp"
        android:background="@mipmap/refresh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="338dp"
        android:layout_height="70dp"
        android:layout_marginStart="31dp"
        android:layout_marginTop="86dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="695dp"
        android:fontFamily="@font/kat"
        android:text="Selecciona una mesa"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mesa5"
        android:layout_width="343dp"
        android:layout_height="80dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="627dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="144dp"
        android:background="@drawable/background_ter"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mesa_5"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mesa3"
        android:layout_width="343dp"
        android:layout_height="80dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="403dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="368dp"
        android:background="@drawable/background_primary"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mesa_3"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mesa2"
        android:layout_width="343dp"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="291dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="480dp"
        android:background="@drawable/background_primary"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mesa_2"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="742dp"
        android:layout_marginEnd="279dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/background_primary"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="Interior"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="285dp"
        android:layout_marginTop="742dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="65dp"
        android:background="@drawable/background_ter"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:text="Terraza"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mesa1"
        android:layout_width="343dp"
        android:layout_height="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="183dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="588dp"
        android:background="@drawable/background_primary"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mesa_1"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/mesa4"
        android:layout_width="343dp"
        android:layout_height="80dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="515dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="256dp"
        android:background="@drawable/background_ter"
        android:fontFamily="@font/kat"
        android:gravity="center"
        android:orientation="horizontal"
        android:text="@string/mesa_4"
        android:textColor="@color/white"
        android:textSize="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>